[gd_scene load_steps=5 format=3 uid="uid://mu1juyaq0jia"]

[ext_resource type="Script" path="res://menu/cutscenes/cutscene_outro.gd" id="1_iyk0s"]
[ext_resource type="Texture2D" uid="uid://c6wor8hnf1spg" path="res://menu/cutscenes/outro.png" id="2_gq2q6"]
[ext_resource type="Theme" uid="uid://b8ud2usk1rgfa" path="res://menu/theme.tres" id="3_iraxe"]
[ext_resource type="AudioStream" uid="uid://d4latrndb3mjq" path="res://assets/audio/voicelines/outro.ogg" id="4_x62n4"]

[node name="CutsceneOutro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iyk0s")
next_scene = "res://menu/credits.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gq2q6")

[node name="ContinueButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -42.0
offset_right = -14.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_iraxe")
text = "Weiter"

[node name="snd_outro" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_x62n4")

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="finished" from="snd_outro" to="." method="_on_snd_news_finished"]
